<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_nosotros"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/integrantes_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            android:id="@+id/datosBachmaster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#038C8C8C"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/alumnoBruno"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/datosArnodorian020"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#038C8C8C"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/alumnoJeanPierre"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/datosDogeFox071101"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#038C8C8C"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/AlumnoLeonardo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/regresar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/integrantes_layout"
        app:layout_constraintStart_toStartOf="@+id/integrantes_layout" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_ulima_w"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>